--- a/cartelera/Base.lproj/Main.storyboard
+++ b/cartelera/Base.lproj/Main.storyboard
@@ -1,24 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="cartelera" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Cinépolis.png" translatesAutoresizingMaskIntoConstraints="NO" id="k56-3m-NAl">
+                                <rect key="frame" x="42.666666666666657" y="46.999999999999993" width="342.66666666666674" height="97.333333333333314"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="k56-3m-NAl" secondAttribute="height" multiplier="320:91" id="8DB-nA-Esd"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="barra.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="FVl-jE-8ws">
+                                <rect key="frame" x="0.0" y="144.33333333333334" width="428" height="68.333333333333343"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="FVl-jE-8ws" secondAttribute="height" multiplier="320:51" id="ATO-6G-Bir"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="tintColor"/>
+                        <constraints>
+                            <constraint firstItem="FVl-jE-8ws" firstAttribute="top" secondItem="k56-3m-NAl" secondAttribute="bottom" id="Dng-oR-Mk9"/>
+                            <constraint firstItem="k56-3m-NAl" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="KBD-tS-8gm"/>
+                            <constraint firstItem="k56-3m-NAl" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.8" id="SCb-Sa-pgT"/>
+                            <constraint firstItem="k56-3m-NAl" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WEz-Ra-owI"/>
+                            <constraint firstItem="FVl-jE-8ws" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="bZY-qr-zHQ"/>
+                            <constraint firstItem="FVl-jE-8ws" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nTN-Gl-jlM"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="132" y="-34"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Cinépolis.png" width="1280" height="363"/>
+        <image name="barra.jpg" width="639.91998291015625" height="102"/>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
